# kool_morning

./: .gitignore  CMakeLists.txt  Messages.sh  README  build.sh  install.sh  metadata.desktop  rebuild.sh
contents/code/: configuration.py  main.py  wol.py
package/: metadata.desktop
package/contents/code/: icmpinstall.sh
package/contents/config/: config.qml  main.xml
package/contents/ui/: configAppearance.qml  configGeneral.qml  main.qml
plugin/: CMakeLists.txt  kool_morningplugin.cpp  kool_morningplugin.h  qmldir
